# VibeStation5

./: .gitignore  README.md  project.yml
Android/: settings.gradle.kts
Android/app/: build.gradle.kts  proguard-rules.pro
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/cpp/: CMakeLists.txt  agc-register-defaults.h  gpu-vulkan.cpp  gpu-vulkan.h  native-lib.cpp  runtime-core.cpp  runtime-core.h  runtime-jni.cpp
Android/app/src/main/res/values/: strings.xml  themes.xml
Scripts/: build-sidestore-ipa.sh
Tools/VibeStation5Probe/: Probe.swift
VibeStation5/: VibeStation5.entitlements
VibeStation5.xcodeproj/: project.pbxproj
VibeStation5.xcodeproj/xcshareddata/xcschemes/: VibeStation5.xcscheme
VibeStation5/App/: VibeStation5App.swift
VibeStation5/Core/: ARMNativeX86Interpreter.swift  BinaryDataReader.swift  ExecutableFormat.swift  ExecutableLoader.swift  PlatformSupport.swift  VirtualMemory.swift  X86Decoder.swift
VibeStation5/Models/: Game.swift  RuntimeModels.swift
VibeStation5/Resources/Assets.xcassets/AccentColor.colorset/: Contents.json
VibeStation5/Resources/Assets.xcassets/AppIcon.appiconset/: Contents.json
VibeStation5/Services/: AppModel.swift  FolderBookmarkStore.swift  GameLibraryScanner.swift  GuestAudioOutput.swift  GuestInputManager.swift  JITCapability.swift  PS5RuntimeEngine.swift
VibeStation5/UI/: RootView.swift
VibeStation5/UI/Components/: CompatibilityGateView.swift  GameArtwork.swift  VibeTheme.swift
VibeStation5/UI/Runtime/: RuntimeConsoleView.swift  RuntimeSummaryView.swift  TouchControlsOverlay.swift
VibeStation5/UI/Settings/: SettingsView.swift  SupportDetailsView.swift
VibeStation5Tests/: ExecutableParserTests.swift  GuestIOTests.swift  JITCapabilityTests.swift  PlatformSupportTests.swift  VirtualMemoryTests.swift
docs/: JIT.md
(+12 files in other folders)
